--- a/html5-boilerplate_v8.0.0/css/main.css
+++ b/html5-boilerplate_v8.0.0/css/main.css
@@ -6,7 +6,10 @@
  * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
  * Kroc Camen, and the H5BP dev community and team.
  */
+/*
 
+This is test.
+*/
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
